--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "recharts": "^2.15.2",
     "sequelize": "^6.37.7",
     "socket.io": "^4.7.2",
     "sqlite3": "^5.1.7"
